2014-05-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_init):
	* src/gstttmlrender.c: (gst_ttmlrender_length_to_pixels),
	(gst_ttmlrender_new_region), (gst_ttmlrender_gen_buffer),
	(gst_ttmlrender_setcaps):
	* src/gstttmlrender.h:
	* src/gstttmlstate.h:
	Move the frame width & height from the ttmlrender to the ttmlstate,
	so it is accessible to other areas of the code.
	No change in functionality.

2014-05-09  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts),
	(gst_ttmlrender_get_property), (gst_ttmlrender_set_property),
	(gst_ttmlrender_dispose), (gst_ttmlrender_class_init),
	(gst_ttmlrender_init):
	* src/gstttmlrender.h:
	* src/gstttmlspan.c: (gst_ttml_span_compose):
	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	* src/gstttmlstyle.h:
	Allow specifying the default font family through a property. This is
	used when the TTML file does not set the font family explicitly.

2014-05-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_normalize_length):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_length_to_pixels):
	* src/gstttmlutils.c:
	Support "em" length units, which are equal to 16 pixels,
	according to http://www.w3schools.com/css/css_font.asp

2014-05-08  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/Parameters/CellResolution001.xml:
	Fix testsuite which is WROOOOOONG!

2014-05-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_normalize_length), (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlforward.h:
	* src/gstttmlrender.c: (gst_ttmlrender_length_to_pixels),
	(gst_ttmlrender_new_region):
	* src/gstttmlstate.c: (gst_ttml_state_reset),
	(gst_ttml_state_set_attribute), (gst_ttml_state_get_attribute):